--- a/CV.tex
+++ b/CV.tex
@@ -97,53 +97,19 @@ Experience}
 {\textbf{Krinu}},
 Boston, MA
 \GapNoBreak
-CPO, Co-founder
+Product Strategy and Development Lead
 \hfill
-2020 -- Present
+Jul 2020 -- Present
 \begin{flushleft}
 
-Krinu is a B2B sales enablement tool built around messaging apps like WhatsApp and iMessage. Pivoted from \href{https://getbuylo.com/}
-{GetBuyLo}, a B2C travel startup.
+\BulletItem Led development of a sales enablement tool that connects messaging apps such as WhatsApp, Telegram, and iMessage to Customer Relationship Management (CRM) systems such as Hubspot and Salesforce. 
+
+\vspace{0.3em} \SubBulletItem Interviewed 200+ customers to identify ideal customer profile and their key painpoints. 
+
+\vspace{0.3em} \SubBulletItem Researched technical specifications and managed software development by interns and contractors.
 
 \vspace{0.75em}
-\BulletItem Strategic leader
-\vspace{0.5em} \SubBulletItem Pitched startups to top VCs, adjusting pitch based on visual and verbal feedback. Raised \$150k USD from US and EU startup accelerators.
-
-\vspace{0.5em} \SubBulletItem Pitched product to customers and led product pivots based on user feedback. Led team of 6 interns and contractors to develop new features to address evolving customer needs. 
-
-\vspace{0.75em}
-\BulletItem Technical leader
-\vspace{0.5em} \SubBulletItem Test test
-
-\vspace{0.5em} \SubBulletItem Led go-to-market of EverQuote's new third-party marketplace product, multi-vertical bundled product, and telemarketing product. Coordinated pre and post launch efforts of sales, customer success and marketing teams to ensure timely execution and maximum realized revenues. Designed in-depth customized dashboards to enable leadership and individual contributors to monitor their/their team's contribution to launch successes. Launched products contributed 30\% of EverQuote's revenues in 2020.
-
-\end{flushleft}
-
-\href{https://antler.co/}
-{\textbf{Antler}},
-Singapore
-\GapNoBreak
-Entrepreneur, Startup Incubator Program
-\hfill
-2021 -- Present
-\begin{flushleft}
-
-\BulletItem Rapidly tested 10+ startup ideas with over 300 potential customers over 11 week program to find problem-solution fit. Interviewees ranged from consumers to executives at large enterprises. Spent \$0 on sourcing interviews.
-
-\end{flushleft}
-
-\href{https://getbuylo.com/}
-{\textbf{GetBuyLo.com}},
-Boston, MA
-\GapNoBreak
-Product Lead, Co-founder
-\hfill
-2020 -- Present
-\begin{flushleft}
-
-\BulletItem Led team of 4 co-founders + 8 interns \& contractors to build and launch initial product, which was a flight deal newsletter + automated trip planner. Scaled product to 17k subscribers in 6 months. Interviewed with top accelerator YCombinator.
-
-\vspace{0.5em} \BulletItem Pivoted and led development of a flight deal browser extension. Developed and launched in 3 weeks, growing to 500+ installs in 2 months. Interviewed with accelerators YCombinator and Pear.
+\BulletItem Developed business pitch decks, summarizing go-to-market strategy, opportunity size, and competitive analyses. Pitched to hundreds of VC and successfully raised \$150k USD from US and EU pre-seed funds. 
 
 \end{flushleft}
 
@@ -154,7 +120,7 @@ Cambridge, MA
 \GapNoBreak
 Manager, Strategy and Operations
 \hfill
-2018 -- 2020
+May 2018 -- Jun 2020
 \begin{flushleft}
 
 \BulletItem Strategic project leader
@@ -177,8 +143,14 @@ Boston, MA
 Senior Analyst,
 Economics Consulting
 \hfill
-2014 --
-2018
+Sep 2014 --
+Apr 2018
+\begin{flushleft}
+
+\BulletItem Led and mentored team of Analysts in data cleaning, data analysis, and writing of expert reports. Evidence presented in the expert reports helped clients win multiple billion-dollar litigation cases.
+
+\end{flushleft}
+
 %%%%%%%%%%%%%%%
 %% EDUCATION %%
 %%%%%%%%%%%%%%%
