--- a/CV-ai-ml.tex
+++ b/CV-ai-ml.tex
@@ -106,9 +106,9 @@ Jul 2020 -- Present
 
 \BulletItem Led development of a sales enablement tool that connects messaging apps such as WhatsApp, Telegram, and iMessage to Customer Relationship Management (CRM) systems such as Hubspot and Salesforce. 
 
-\vspace{0.3em} \SubBulletItem Interviewed 200+ customers to identify ideal customer profile and their key painpoints. 
+\vspace{0.3em} \SubBulletItem Designed and built from scratch novel visualizations of customer's messaging data
 
-\vspace{0.3em} \SubBulletItem Researched technical specifications and managed software development by interns and contractors.
+\vspace{0.3em} \SubBulletItem Designed and built NLP pipeline to analyze and extract sentiment and topics from messaging data
 
 \vspace{0.75em}
 \BulletItem Developed business pitch decks, summarizing go-to-market strategy, opportunity size, and competitive analyses. Pitched to hundreds of VC and successfully raised \$150k USD from US and EU pre-seed funds. 
