--- a/CV.tex
+++ b/CV.tex
@@ -71,7 +71,7 @@ breaklinks}
 \title{\CVAuthor}
 
 \begin{subtitle}
-Boston, MA
+19 Follen St, Apt 2, Boston, MA
 \par
 \href{mailto:ju.li@outlook.com}
 {ju.li@outlook.com}
@@ -106,10 +106,10 @@ Jul 2020 -- Present
 
 \vspace{0.3em} \SubBulletItem Interviewed 200+ customers to identify ideal customer profile and their key painpoints. 
 
-\vspace{0.3em} \SubBulletItem Researched technical specifications and managed software development by interns and contractors.
+\vspace{0.3em} \SubBulletItem Researched technical specifications and led team's development of integrations.
 
 \vspace{0.75em}
-\BulletItem Developed business pitch decks, summarizing go-to-market strategy, opportunity size, and competitive analyses. Pitched to hundreds of VC and successfully raised \$150k USD from US and EU pre-seed funds. 
+\BulletItem Extracted customer and produc data from internal SQL databases to build financial projections of performance. Developed business pitch decks and successfully raised \$150k USD from pre-seed funds. 
 
 \end{flushleft}
 
@@ -123,15 +123,21 @@ Manager, Strategy and Operations
 May 2018 -- Jun 2020
 \begin{flushleft}
 
-\BulletItem Strategic project leader
-\vspace{0.5em} \SubBulletItem Led go-to-market of EverQuote's new third-party marketplace product, multi-vertical bundled product, and telemarketing product. Coordinated pre and post launch efforts of sales, customer success and marketing teams to ensure timely execution and maximum realized revenues. Designed in-depth customized dashboards to enable leadership and individual contributors to monitor their/their team's contribution to launch successes. Launched products contributed 30\% of EverQuote's revenues in 2020.
+\BulletItem Led go-to-market of multiple new products
+\vspace{0.5em} \SubBulletItem Extracted and analyzed SQL data to build financial projections of impact of new product launches, highlighting their impact on quarterly revenue. Detailed projections helped obtain C-Suite buy-in to designate projects as P1. 
 
-\vspace{0.5em} \SubBulletItem Led redesign and overhaul of B2B organization's sales and customer success commission models, transitioning from a per-unit-sold to a revenue-based commission model. Designed visualization, tracking and reporting tools to enable the sales and customer success teams to be successful under their new commission plans. Resulted in 200\%+ increase in Sales productivity and 60\% growth in revenue between 2019 and 2020.
+\vspace{0.5em} \SubBulletItem Coordinated pre- and post-launch efforts of sales, customer success and marketing teams to ensure smooth launch and maximum impact. 
+
+\vspace{0.5em} \SubBulletItem Designed in-depth customized dashboards in Looker and Tableau that enabled leadership and individual contributors to track progress to goals. 
+
+\vspace{0.5em} \SubBulletItem Launched products contributed 30\% of EverQuote's revenues in 2020.
 
 \vspace{0.75em}
-\BulletItem Leadership and mentoring
+\BulletItem Designed the team's intern and co-op hiring program
 
-\vspace{0.5em} \SubBulletItem Designed the team's intern and co-op hiring program. Hired and rapidly brought up to speed the team's intern/co-op/junior hires. Significantly grew team's operational capacity without adding to opex. Team did not add to headcount but effectively supported Sales and Customer Success organizations that had doubled in size.
+\vspace{0.5em} \SubBulletItem Designed onboarding curriculum and playbook to bring team's hires up to speed quickly. 
+
+\vspace{0.5em} \SubBulletItem Enabled team to effectively support Sales and Customer Success organizations that had doubled in headcount, without adding to the team's opex.
 
 \end{flushleft}
 
@@ -189,7 +195,7 @@ English (Fluent), Mandarin Chinese (Intermediate)
 {Skills}
 {PDF:Skills}
 
-Excel, Bloomberg, CapitalIQ, Statistical Tools (Stata, SAS, R), Programming Languages (VBA, Python, Javascript), Databases (MySQL, PostgreSQL, DynamoDB), CRM (Salesforce, Hubspot), Dashboarding Tools (Looker, Tableau)
+Excel, Statistical Tools (Stata, SAS, R), Programming Languages (VBA, Python, Javascript), Databases (MySQL, PostgreSQL, DynamoDB), CRMs (Salesforce, Hubspot), Business Intelligence Tools (Looker, Tableau)
 
 %%%%%%%%%%%%%%%
 %% INTERESTS %%
@@ -200,7 +206,7 @@ Excel, Bloomberg, CapitalIQ, Statistical Tools (Stata, SAS, R), Programming Lang
 {Interests}
 {PDF:Interests}
 
-Poker, musicals, recreating Singaporean dishes, collecting old vinyl records, stand-up comedy
+Poker, musicals, making dumplings, stand-up comedy
 
 \end{body}
 
