--- a/CV.tex
+++ b/CV.tex
@@ -102,14 +102,15 @@ Product Strategy and Development Lead
 Jul 2020 -- Present
 \begin{flushleft}
 
-\BulletItem Led development of a sales enablement tool that connects messaging apps such as WhatsApp, Telegram, and iMessage to Customer Relationship Management (CRM) systems such as Hubspot and Salesforce. 
+\BulletItem Led development of Krinu, a sales enablement tool that connects messaging apps such as WhatsApp, Telegram, and iMessage to Customer Relationship Management (CRM) systems such as Hubspot and Salesforce. 
 
-\vspace{0.3em} \SubBulletItem Interviewed 200+ customers to identify ideal customer profile and their key painpoints. 
+\vspace{0.3em} \SubBulletItem 
+Identified ideal customer profile and key painpoints by conducting over 200 customer interviews.  
 
-\vspace{0.3em} \SubBulletItem Researched technical specifications and led team's development of integrations.
+\vspace{0.3em} \SubBulletItem Designed unified platform for integrating with CRMs and messaging apps. Researched each systems' technical specifications to identify incompatibilities. Designed workarounds to the incompatibilities to deliver consistent feature set across all integrations. 
 
 \vspace{0.75em}
-\BulletItem Extracted customer and produc data from internal SQL databases to build financial projections of performance. Developed business pitch decks and successfully raised \$150k USD from pre-seed funds. 
+\BulletItem Raised \$150k USD from pre-seed VCs. Developed pitch deck and financial projections using customer and product data extracted from internal SQL databases. 
 
 \end{flushleft}
 
@@ -123,21 +124,19 @@ Manager, Strategy and Operations
 May 2018 -- Jun 2020
 \begin{flushleft}
 
-\BulletItem Led go-to-market of multiple new products
-\vspace{0.5em} \SubBulletItem Extracted and analyzed SQL data to build financial projections of impact of new product launches, highlighting their impact on quarterly revenue. Detailed projections helped obtain C-Suite buy-in to designate projects as P1. 
+\BulletItem Led go-to-market of multiple new products that contributed 30\% of EverQuote's revenues in 2020.
+\vspace{0.5em} \SubBulletItem Secured C-Suite buy-in to designate projects as P1 by presenting highly detailed project plans and projections. Projections highlighted projects' potential impact on revenues and were developed by extracting and analyzing internal SQL data.
 
-\vspace{0.5em} \SubBulletItem Coordinated pre- and post-launch efforts of sales, customer success and marketing teams to ensure smooth launch and maximum impact. 
+\vspace{0.5em} \SubBulletItem Delivered projects on time through careful negotiation of timelines with product, sales, support and marketing teams. Mediated and resolved conflicts and blockers. 
 
 \vspace{0.5em} \SubBulletItem Designed in-depth customized dashboards in Looker and Tableau that enabled leadership and individual contributors to track progress to goals. 
 
-\vspace{0.5em} \SubBulletItem Launched products contributed 30\% of EverQuote's revenues in 2020.
-
 \vspace{0.75em}
-\BulletItem Designed the team's intern and co-op hiring program
+\BulletItem Hired, trained, and managed the team's interns. 
 
-\vspace{0.5em} \SubBulletItem Designed onboarding curriculum and playbook to bring team's hires up to speed quickly. 
+\vspace{0.5em} \SubBulletItem Directed multiple high-impact intern projects that were deployed to production, such as an automated system for generating customer performance reports.
 
-\vspace{0.5em} \SubBulletItem Enabled team to effectively support Sales and Customer Success organizations that had doubled in headcount, without adding to the team's opex.
+\vspace{0.5em} \SubBulletItem Designed onboarding curriculum and playbook that enabled new interns to contribute within 2 weeks. 
 
 \end{flushleft}
 
@@ -195,7 +194,7 @@ English (Fluent), Mandarin Chinese (Intermediate)
 {Skills}
 {PDF:Skills}
 
-Excel, Statistical Tools (Stata, SAS, R), Programming Languages (VBA, Python, Javascript), Databases (MySQL, PostgreSQL, DynamoDB), CRMs (Salesforce, Hubspot), Business Intelligence Tools (Looker, Tableau)
+Excel, Databases (MySQL, PostgreSQL, BigQuery), Business Intelligence Tools (Looker, Tableau), CRMs (Salesforce, Hubspot), Programming Languages (VBA, Python, Javascript), Statistical Tools (Stata, SAS, R)
 
 %%%%%%%%%%%%%%%
 %% INTERESTS %%
@@ -211,5 +210,3 @@ Poker, musicals, making dumplings, stand-up comedy
 \end{body}
 
 \end{document}
-\vspace{0.5em} \SubBulletItem Developed an algorithm for computing product inventory, synthesizing data from disparate sources into a simple to understand metric. Automated computation utilizing Python scripts. Created dashboards and visualizations in Looker, enabling Leadership to easily understand inventory trends and pivot organization towards undersold territories.
-
