--- a/CV.tex
+++ b/CV.tex
@@ -23,8 +23,7 @@
 
 % \documentclass[a4paper,10pt,oneside]{article}
 \documentclass[letterpaper,10pt,oneside]{article}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{xeCJK}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% TYPESETTING OPTIONS.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -38,7 +37,7 @@
 \input{CV-Preamble.tex}
 
 % CV Info (to be customized).
-\newcommand{\CVAuthor}{Ju Li}
+\newcommand{\CVAuthor}{Li Ju (李巨)}
 
 % PDF settings and properties.
 \hypersetup{
@@ -71,12 +70,12 @@ breaklinks}
 \title{\CVAuthor}
 
 \begin{subtitle}
-19 Follen St, Apt 2, Boston, MA
+69M Jalan Lim Tai See, Singapore 268475
 \par
 \href{mailto:ju.li@outlook.com}
 {ju.li@outlook.com}
 \,\SubBulletSymbol\,
-+1\,(617)\,869-0884
++65\,8011\,2591
 \par 
 \href{https://www.linkedin.com/in/juli2/}{https://www.linkedin.com/in/juli2/}
 \end{subtitle}
