change krinu to SG

--- a/CV.tex
+++ b/CV.tex
@@ -94,7 +94,7 @@ Experience}
 
 \href{https://krinu.com/}
 {\textbf{Krinu}},
-Boston, MA
+Singapore
 \GapNoBreak
 Product Strategy and Development Lead
 \hfill
