--- a/US-Generic-Product/US-Generic-Product.tex
+++ b/US-Generic-Product/US-Generic-Product.tex
@@ -23,9 +23,7 @@
 
 % \documentclass[a4paper,10pt,oneside]{article}
 \documentclass[letterpaper,10pt,oneside]{article}
-\usepackage{xeCJK}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{xeCJK}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% TYPESETTING OPTIONS.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -97,21 +95,22 @@ Experience}
 
 \href{https://krinu.com/}
 {\textbf{Krinu}},
-Boston, MA 
+Boston, MA
 \GapNoBreak
 Product Strategy and Development Lead
 \hfill
 Jul 2020 -- Present
 \begin{flushleft}
 
-\BulletItem Led development of a SaaS product that connects messaging apps such as WhatsApp, Telegram, and iMessage to Customer Relationship Management (CRM) systems such as Hubspot and Salesforce. 
+\BulletItem Led development of Krinu, a SaaS product that connects messaging apps such as WhatsApp, Telegram, and iMessage to Customer Relationship Management (CRM) systems such as Hubspot and Salesforce. 
 
-\vspace{0.3em} \SubBulletItem Designed and built from scratch novel visualizations of customer's messaging data
+\vspace{0.3em} \SubBulletItem 
+Identified ideal customer profile and key painpoints by conducting over 200 customer interviews.  
 
-\vspace{0.3em} \SubBulletItem Designed and built NLP pipeline to analyze and extract sentiment and topics from messaging data
+\vspace{0.3em} \SubBulletItem Designed unified platform for integrating with CRMs and messaging apps. Researched each systems' technical specifications to identify incompatibilities. Designed workarounds to the incompatibilities to deliver consistent feature set across all integrations. 
 
 \vspace{0.75em}
-\BulletItem Developed business pitch decks, summarizing go-to-market strategy, opportunity size, and competitive analyses. Pitched to hundreds of VC and successfully raised \$150k USD from US and EU pre-seed funds. 
+\BulletItem Raised \$150k USD from pre-seed VCs. Developed pitch deck and financial projections using customer and product data extracted from internal SQL databases. 
 
 \end{flushleft}
 
@@ -195,7 +194,7 @@ English (Fluent), Mandarin Chinese (Intermediate)
 {Skills}
 {PDF:Skills}
 
-Excel, Bloomberg, CapitalIQ, Statistical Tools (Stata, SAS, R), Programming Languages (VBA, Python, Javascript), Databases (MySQL, PostgreSQL, DynamoDB), CRM (Salesforce, Hubspot), Dashboarding Tools (Looker, Tableau)
+Excel, Databases (MySQL, PostgreSQL, BigQuery), Business Intelligence Tools (Looker, Tableau), CRMs (Salesforce, Hubspot), Programming Languages (VBA, Python, Javascript), Statistical Tools (Stata, SAS, R)
 
 %%%%%%%%%%%%%%%
 %% INTERESTS %%
@@ -206,10 +205,8 @@ Excel, Bloomberg, CapitalIQ, Statistical Tools (Stata, SAS, R), Programming Lang
 {Interests}
 {PDF:Interests}
 
-Poker, musicals, recreating Singaporean dishes, collecting old vinyl records, stand-up comedy
+Poker, musicals, making dumplings, stand-up comedy
 
 \end{body}
 
 \end{document}
-\vspace{0.5em} \SubBulletItem Developed an algorithm for computing product inventory, synthesizing data from disparate sources into a simple to understand metric. Automated computation utilizing Python scripts. Created dashboards and visualizations in Looker, enabling Leadership to easily understand inventory trends and pivot organization towards undersold territories.
-
