sales strategy version

--- a/US-Generic-Product/US-Generic-Product.tex
+++ b/US-Generic-Product/US-Generic-Product.tex
@@ -37,7 +37,7 @@
 \input{CV-Preamble.tex}
 
 % CV Info (to be customized).
-\newcommand{\CVAuthor}{Li Ju}
+\newcommand{\CVAuthor}{Ju Li}
 
 % PDF settings and properties.
 \hypersetup{
