--- a/US-Generic-SalesStrategy/US-Generic-SalesStrategy.tex
+++ b/US-Generic-SalesStrategy/US-Generic-SalesStrategy.tex
@@ -23,9 +23,7 @@
 
 % \documentclass[a4paper,10pt,oneside]{article}
 \documentclass[letterpaper,10pt,oneside]{article}
-\usepackage{xeCJK}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{xeCJK}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% TYPESETTING OPTIONS.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -97,21 +95,19 @@ Experience}
 
 \href{https://krinu.com/}
 {\textbf{Krinu}},
-Boston, MA 
+Boston, MA
 \GapNoBreak
 Product Strategy and Development Lead
 \hfill
 Jul 2020 -- Present
 \begin{flushleft}
 
-\BulletItem Led development of a SaaS product that connects messaging apps such as WhatsApp, Telegram, and iMessage to Customer Relationship Management (CRM) systems such as Hubspot and Salesforce. 
+\BulletItem Led development of Krinu, a SaaS sales enablement tool that connects messaging apps such as WhatsApp, Telegram, and iMessage to Customer Relationship Management (CRM) systems such as Hubspot and Salesforce. 
 
-\vspace{0.3em} \SubBulletItem Designed and built from scratch novel visualizations of customer's messaging data
-
-\vspace{0.3em} \SubBulletItem Designed and built NLP pipeline to analyze and extract sentiment and topics from messaging data
+\vspace{0.3em} \SubBulletItem Designed unified platform for integrating with CRMs and messaging apps. Researched each systems' technical specifications to identify incompatibilities. Designed workarounds to the incompatibilities to deliver consistent feature set across all integrations. 
 
 \vspace{0.75em}
-\BulletItem Developed business pitch decks, summarizing go-to-market strategy, opportunity size, and competitive analyses. Pitched to hundreds of VC and successfully raised \$150k USD from US and EU pre-seed funds. 
+\BulletItem Raised \$150k USD from pre-seed VCs. Developed pitch deck and financial projections using customer and product data extracted from internal SQL databases. 
 
 \end{flushleft}
 
@@ -125,12 +121,14 @@ Manager, Strategy and Operations
 May 2018 -- Jun 2020
 \begin{flushleft}
 
-\BulletItem Led go-to-market of multiple new products that contributed 30\% of EverQuote's revenues in 2020.
-\vspace{0.5em} \SubBulletItem Secured C-Suite buy-in to designate projects as P1 by presenting highly detailed project plans and projections. Projections highlighted projects' potential impact on revenues and were developed by extracting and analyzing internal SQL data.
 
-\vspace{0.5em} \SubBulletItem Delivered projects on time through careful negotiation of timelines with product, sales, support and marketing teams. Mediated and resolved conflicts and blockers. 
+\BulletItem Led re-organization of B2B organization's sales and customer success teams. Completely revamped the hiring, commission, and operational strategy that resulted in 200\%+ increase in Sales productivity and 60\% growth in revenue between 2019 and 2020.
 
-\vspace{0.5em} \SubBulletItem Designed in-depth customized dashboards in Looker and Tableau that enabled leadership and individual contributors to track progress to goals. 
+\vspace{0.5em} \SubBulletItem 	Negotiated and oversaw optimization of commission models, transitioning the teams from a per-unit-sold to a revenue-based commission model. 
+
+\vspace{0.5em} \SubBulletItem 	Designed visualization, tracking and reporting tools to enable individual contributors and managers to succeed under the new commission plans. 
+
+\vspace{0.5em} \SubBulletItem 	Developed Unit Economics Model for each B2B territory. This model quantified the performance and opportunity for growth for each B2B territory, laying the groundwork for EverQuote's B2B re-organization and growth in 2020.
 
 \vspace{0.75em}
 \BulletItem Hired, trained, and managed the team's interns. 
@@ -195,7 +193,7 @@ English (Fluent), Mandarin Chinese (Intermediate)
 {Skills}
 {PDF:Skills}
 
-Excel, Bloomberg, CapitalIQ, Statistical Tools (Stata, SAS, R), Programming Languages (VBA, Python, Javascript), Databases (MySQL, PostgreSQL, DynamoDB), CRM (Salesforce, Hubspot), Dashboarding Tools (Looker, Tableau)
+Excel, Databases (MySQL, PostgreSQL, BigQuery), Business Intelligence Tools (Looker, Tableau), CRMs (Salesforce, Hubspot), Programming Languages (VBA, Python, Javascript), Statistical Tools (Stata, SAS, R)
 
 %%%%%%%%%%%%%%%
 %% INTERESTS %%
@@ -206,10 +204,8 @@ Excel, Bloomberg, CapitalIQ, Statistical Tools (Stata, SAS, R), Programming Lang
 {Interests}
 {PDF:Interests}
 
-Poker, musicals, recreating Singaporean dishes, collecting old vinyl records, stand-up comedy
+Poker, musicals, making dumplings, stand-up comedy
 
 \end{body}
 
 \end{document}
-\vspace{0.5em} \SubBulletItem Developed an algorithm for computing product inventory, synthesizing data from disparate sources into a simple to understand metric. Automated computation utilizing Python scripts. Created dashboards and visualizations in Looker, enabling Leadership to easily understand inventory trends and pivot organization towards undersold territories.
-
