v1 resume for stanford

--- a/US-Generic-Accurate/US-Generic-Accurate.tex
+++ b/US-Generic-Accurate/US-Generic-Accurate.tex
@@ -70,13 +70,12 @@ breaklinks}
 \title{\CVAuthor}
 
 \begin{subtitle}
-\vspace{0.7em}
-19 Follen St, Apt 2, Boston, MA 02116
+\vspace{1em}
+244 St Pauls Ave, Apt 621, Jersey City, NJ 07306
 \par
-\href{mailto:ju.li@outlook.com}
-{ju.li@outlook.com}
+\href{mailto:ju.li@outlook.com}{ju.li@outlook.com}
 \,\SubBulletSymbol\,
-+1\,(617)\,869\,0884
+\href{tel:16178690884}{+1\,(617)\,869\,0884}
 \par 
 \href{https://www.linkedin.com/in/juli2/}{https://www.linkedin.com/in/juli2/}
 \end{subtitle}
@@ -93,31 +92,47 @@ Experience}
 {Work Experience}
 {PDF:WorkExp}
 
-\href{https://krinu.com/}
-{\textbf{Krinu}},
-Boston, MA
+\href{https://www.masterworks.com/}
+{\textbf{Masterworks}},
+New York, NY
 \GapNoBreak
-Cofounder, CPO
+Membership Operations Manager
 \hfill
-Jul 2021 -- Present
+Mar 2023 -- Present
 \begin{flushleft}
 
-\BulletItem Led development of Krinu, a SaaS sales enablement tool that connects messaging apps such as WhatsApp, Telegram, and iMessage to Customer Relationship Management (CRM) systems such as Hubspot, Salesforce and Affinity. 
+\BulletItem Sole developer of special projects such as AI intro videos and custom telephony integrations to test new strategies that improved member activation rates by 18\% and member investments by 29\%. 
 
-\vspace{0.3em} \BulletItem Managed internal systems (marketing, CRM, analytics), admin work (hiring, payroll, accounting, captable), customer acquisition (cold outreach, sales demos), project management, product development, etc.
+\vspace{0.3em} \BulletItem Conducted technical research into various solutions. Negotiated with vendors. Documented limitations. Strategized workarounds. Designed no-code workflows and wrote custom Python/Typescript functions to execute projects. Enabled sales team to start new tests in days, not weeks.
+
+\end{flushleft}
+
+\textbf{Various Startups},
+Boston, MA
+\GapNoBreak
+Cofounder, CPO of \href{https://krinu.com/}{\textbf{Krinu.com}}
+\hfill
+Jul 2021 -- Jan 2023
+\GapNoBreak
+Founder of \href{https://tripli.com/}{\textbf{Tripli.com}} and \href{https://getbuylo.com/}{\textbf{GetBuyLo.com}}
+\hfill
+Jul 2020 -- Jun 2021
+\begin{flushleft}
+
+\BulletItem Managed 5+ contractors and interns in the development of:
+
+\vspace{0.3em} \SubBulletItem Krinu - a sales enablement tool connecting messaging apps like WhatsApp and Telegram with customer relationship management systems like Hubspot and Salesforce
+
+\vspace{0.3em} \SubBulletItem GetBuyLo - a browser extension that finds cheap flights at checkout
+
+\vspace{0.3em} \SubBulletItem Tripli - an automated trip planning tool
 
 \vspace{0.3em}
 \BulletItem Raised \$150k USD from pre-seed VCs. Developed pitch deck and financial projections using customer and product data extracted from internal SQL databases. 
 
 \end{flushleft}
 
-\textbf{Misc Startups},
-Boston, MA
-\hfill
-Jul 2020 -- Jun 2021
-
-
-\vspace{0.5em}\href{http://www.everquote.com/}
+\href{https://www.everquote.com/}
 {\textbf{EverQuote}},
 Cambridge, MA
 \GapNoBreak
@@ -127,25 +142,17 @@ May 2018 -- Jun 2020
 \begin{flushleft}
 
 
-\BulletItem Led re-organization of B2B organization's sales and customer success teams. Completely revamped the hiring, commission, and operational strategy that resulted in 200\%+ increase in Sales productivity and 60\% growth in revenue between 2019 and 2020.
+\BulletItem Led re-organization of B2B organization's sales and customer success teams. Completely revamped the hiring, commission, and operational strategy that resulted in 100\%+ increase in Sales productivity and 60\% growth in revenue between 2019 and 2020.
 
-\vspace{0.5em} \SubBulletItem 	Negotiated and oversaw optimization of commission models, transitioning the teams from a per-unit-sold to a revenue-based commission model. 
+\vspace{0.4em} \SubBulletItem 	Negotiated and oversaw optimization of commission models, transitioning the teams from a per-unit-sold to a revenue-based commission model. 
 
-\vspace{0.5em} \SubBulletItem 	Designed visualization, tracking and reporting tools to enable individual contributors and managers to succeed under the new commission plans. 
+\vspace{0.4em} \SubBulletItem 	Designed visualization, tracking and reporting tools to enable individual contributors and managers to succeed under the new commission plans. 
 
-\vspace{0.5em} \SubBulletItem 	Developed Unit Economics Model for each B2B territory. This model quantified the performance and opportunity for growth for each B2B territory, laying the groundwork for EverQuote's B2B re-organization and growth in 2020.
-
-\vspace{0.75em}
-\BulletItem Hired, trained, and managed the team's analysts and interns. 
-
-\vspace{0.5em} \SubBulletItem Directed multiple high-impact projects that were deployed to production, such as an automated system for generating customer performance reports.
-
-\vspace{0.5em} \SubBulletItem Designed onboarding curriculum and playbook that enabled new hires to contribute within 2 weeks. 
+\vspace{0.4em} \SubBulletItem 	Developed Unit Economics Model for each B2B territory. This model quantified the performance and opportunity for growth for each B2B territory, laying the groundwork for EverQuote's B2B re-organization and growth in 2020.
 
 \end{flushleft}
 
-\vspace{0.75em}
-\href{http://www.analysisgroup.com/}
+\href{https://www.analysisgroup.com/}
 {\textbf{Analysis Group}},
 Boston, MA
 \GapNoBreak
